--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
@@ -8,5 +8,9 @@
 Hello!
 
 <a href="/goodbye">Say goodbye</a> or <a href="/exit">Exit</a>
+or <a href="/first/hello?name=Ivan&surname=Ivanov">Request with parameters</a>
+
+<p th:text="${message}" />
+
 </body>
 </html>
